Backport all changes (compiles, untested)